More swagger api documentaions && add documentation link in readme file
